<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schecivmas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_post_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="16dp"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_post_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/user_username"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_post_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:lineSpacingMultiplier="1"
            android:text="@string/user_company"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_post_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/user_location"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_post_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/user_repository"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:src="@drawable/ic_favorite_false_24dp"/>

        </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white" />
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>